# Book-Reader

./: .gitignore  package-lock.json  package.json  pyproject.toml  vite.config.js
app/: config.py  database.py  dependency.py  main.py
app/models/: __init__.py  book.py  index.py  job.py  page.py  pages.py  user.py
app/routes/: auth.py  book.py  reader.py
app/schemas/: job.py  reader.py  task.py
app/services/: authservice.py  bookservice.py  indexservice.py  jobservice.py  userservice.py
app/src/css/: viewer.css
app/src/js/: viewer.js
app/templates/: catalog.html  viewer.html
app/utilis/: document.py  jobs.py  security.py
app/web/: viewer.html  viewer.mjs
migrations/: env.py
migrations/versions/: 02e8577a31f5_init.py  045e9ea20cda_add_page_table.py  091b79df4337_changes_to_books_and_jobs_table.py  20bffe0e251c_add_chunks_table.py  25bd94a19627_add_completed_column_in_jobs.py  57d9f26f0d4e_convert_img_path_to_array.py  6641acfbade4_add_img_path_column_to_pages_table.py  6ddc33b11ba8_add_partial_index.py  889e3ca5f025_add_total_page_column.py  a1fa50cde078_create_refreshtoken_table.py  a88d54711dd4_add_job_table.py  afeef297079c_modified_refreshtoken_schema.py  ce12e6c2d2dd_modified_books_table_index.py  d26abbfccadc_add_status_column.py  d5dc864d474c_modified_page_index_enum.py  e5699eae014e_book_filename_index_add.py
processing/: extractor.py  worker.py
