[project]
name = "collab-book-reader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "alembic>=1.17.2",
    "alembic-postgresql-enum==1.10.0",
    "asyncpg>=0.31.0",
    "core-db",
    "docling[rapidocr,tesserocr,vlm]>=2.74.0",
    "edwh-uuid7>=0.2.3",
    "fastapi[standard]>=0.128.0",
    "flash-attn>=2.8.3",
    "fonttools>=4.61.1",
    "onnxruntime>=1.24.1",
    "pillow>=12.1.0",
    "pwdlib[argon2]>=0.3.0",
    "pydantic-settings>=2.12.0",
    "pyjwt>=2.10.1",
    "pymupdf>=1.26.6",
    "pymupdf-layout>=1.26.6",
    "pymupdf4llm>=0.2.9",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.10",
    "sentence-transformers>=5.2.3",
    "sqlalchemy>=2.0.45",
    "sqlmodel>=0.0.31",
    "tenacity>=9.1.4",
]

[tool.uv.sources]
flash-attn = { url = "https://github.com/mjun0812/flash-attention-prebuild-wheels/releases/download/v0.7.16/flash_attn-2.8.3%2Bcu128torch2.10-cp313-cp313-linux_x86_64.whl" }
core-db = { path = "../core_db", editable = true }



